--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -163,6 +163,7 @@ navbar {
 
     .video-cont {
         width: 100%;
+        text-align: center;
 
         .video-self {
             height: 400px;
@@ -170,6 +171,27 @@ navbar {
             background-color: #393e46;
             border-radius: 10px;
             object-fit: cover;
+        }
+
+        .settings {
+            margin: 0 auto;
+            display: flex;
+            margin-top: 10px;
+            width: 100px;
+            .mic,
+            .webcam {
+                background-color: #4ecca3;
+                border-radius: 100px;
+                padding: 10px;
+                width: 40px;
+                height: 40px;
+                margin-right: 10px;
+                color: white;
+
+                &:hover {
+                    background-color: #393e46;
+                }
+            }
         }
     }
 }
