--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -146,6 +146,10 @@ navbar {
             }
         }
 
+        .roomcode-error{
+            border-bottom: 3px solid rgb(211, 28, 28);
+        }
+
         .joinroom {
             margin-top: 20px;
             width: 100%;
@@ -178,9 +182,23 @@ navbar {
             display: flex;
             margin-top: 10px;
             width: 100px;
-            .mic,
-            .webcam {
+            
+            .device{
                 background-color: #4ecca3;
+                border-radius: 100px;
+                padding: 10px;
+                width: 40px;
+                height: 40px;
+                margin-right: 10px;
+                color: white;
+
+                &:hover {
+                    background-color: #393e46;
+                }
+            }
+
+            .nodevice{
+                background-color: #b12c2c;
                 border-radius: 100px;
                 padding: 10px;
                 width: 40px;
